--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+doc/Interfaces/navega.vpp.bak_000f
+doc/Interfaces/navega.vpp.bak_001d
+doc/Interfaces/navega.vpp.bak_002d
