--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 doc/Interfaces/navega.vpp.bak_000f
 doc/Interfaces/navega.vpp.bak_001d
 doc/Interfaces/navega.vpp.bak_002d
+*.bak_000f
